<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/mCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:cardCornerRadius="5dp" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/mImgPath"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_near_me_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/mImgTel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mImgTel"
                    app:layout_constraintTop_toTopOf="@+id/mImgTel" />

                <TableLayout
                    android:id="@+id/mTableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:stretchColumns="*"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableLayout>

                <TextView
                    android:id="@+id/mTxtState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtRemark" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/hospital_state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtRemark" />

                <TextView
                    android:id="@+id/mTxtRemark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/mTableLayout" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/hospital_remark"
                    app:layout_constraintEnd_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/mTableLayout" />

                <TextView
                    android:id="@+id/mTxtWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtYear" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/hospital_week"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/mTxtYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtSpecialType" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/hospital_year"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/mTxtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/mask_bean_name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/mTxtAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/mask_bean_address"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_location_on_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <TextView
                    android:id="@+id/mTxtTel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/mask_bean_tel"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtAddress" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_call_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtAddress" />

                <TextView
                    android:id="@+id/mTxtDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/mask_bean_datetime"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mImgTel" />

                <TextView
                    android:id="@+id/mTxtSpecialType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="TextView"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtSalesType" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/hospital_special_type"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/mTxtSalesType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="TextView"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtTel" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/hospital_sales_type"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtTel" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_time_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/mTxtDateTime"
                    app:layout_constraintTop_toTopOf="@+id/mTxtDateTime" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/colorYellow"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtName">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_margin="10dp"
                        android:text="@string/mask_bean_child"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/mTxtChildMask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="10dp"
                        android:text="TextView"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    app:cardBackgroundColor="@color/colorBlue"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintEnd_toStartOf="@+id/cardView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtName">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_margin="10dp"
                        android:text="@string/mask_bean_adult"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/mTxtAdultMask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="10dp"
                        android:text="TextView"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/mImgMap"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_location_on_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/mImgTel"
                    app:layout_constraintEnd_toStartOf="@+id/mImgTel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mImgTel" />

                <ImageView
                    android:id="@+id/mImgTel"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_call_24dp"
                    app:layout_constraintEnd_toStartOf="@+id/mImgPath"
                    app:layout_constraintStart_toEndOf="@+id/mImgMap"
                    app:layout_constraintTop_toBottomOf="@+id/mTxtState" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</LinearLayout>